
- Fixed: Invalid font creation in haru driver.
- Fixed: Implementation of PDF wrapper class, to call correct renderer.
- Fixed: Implementation of style loading in PDF wrapper class.
- Implemented: Method to register additional PDF parts in wrapper class.
- Implemented: Global error reporting interface, now also used by the PDF
  renderer.


1.2alpha1 - Tuesday 26 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented CSS based PDF rendering for basic docbook markup.


1.1.2 - Monday 30 March 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Parsing of lists inside simple table cells
- Fixed: Error reporting of document handlers were not used in converters
- Implemented #14075: Text roles support for RST
- Implemented #14403: Add support for replace-"directive".


1.1.1 - Monday 09 February 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14332: Paragraphs are sometimes missing in the output, when
  converting rst documents
- Fixed issue #14390: Items before first section are merged with first section
- Fixed issue #14405: Comments in RST not handled for all cases
- Fixed issue #14406: Unknown property 'indentation' used in RST parser
- Fixed issue #14407: Underscores not allowed to appear in RST documents
- Fixed issue #14408: Error parsing grd tables, where first line does not
  provide full table column specification
- Fixed issue #14415: Simple table markup does not work with header cell
  spanning all columns


1.1 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14136: Errors in some file docblocks
- Fixed issue #14185: Invalid docbook markup created for table cells in wiki
  visitor
- Fixed issue #14188: ezcDocumentEzXml::getAsDocbook() returns an
  ezcDocumentEzXml rather than ezcDocumentDocbook